shrinkwrap bugs

--- a/web/app/themes/sientra-theme/resources/assets/styles/layouts/_pages.scss
+++ b/web/app/themes/sientra-theme/resources/assets/styles/layouts/_pages.scss
@@ -1564,6 +1564,10 @@
         flex-direction: row;
         height: 32vw;
       }
+      img {
+        width: auto;
+        height: 100%;
+      }
       .eol_si_shrink {
         height: auto;
         width: 100%;
